# gradioChat

./: .dockerignore  .env.exmaple  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test.py
controllers/: CrewController.py  FileController.py  __init__.py
crew/: README.md  crew.py
crew/config/: agents.yaml
crew/markdown_outputs/: ca2-data (2).md  ca7-pipe (1).md  ca9-caches (1).md
crew/src/crew/: crew.py  main.py
crew/tools/: custom_tool.py  doc_to_summary_tool.py  pdf_summary_tool.py
crews/: __init__.py
crews/crewai_enterprise_content_marketing_ideas_crew/: crew.py  main.py
crews/palces_crew/: crew.py
crews/palces_crew/config/: agents.yaml  tasks.yaml
crews/palces_crew/tools/: google_places_tool.py
crews/pdf_crew/: __init__.py  crew.py
crews/pdf_crew/config/: tasks.yaml
crews/pdf_crew/tools/: __init__.py  doc_to_summary_tool.py
crews/places_crew/: __init__.py  crew.py
crews/places_crew/config/: tasks.yaml
crews/places_crew/tools/: __init__.py  google_geocoding_tool.py  google_places_tool.py
crews/prep_for_meeting_crew/: crew.py  main.py
gradio_ui/: crew_data_fetch.py  file_handling.py  get_crew_response.py  ui.py
models/: CrewModel.py  __init__.py
views/: GardioView.py  __init__.py
